--- a/Math-Ba-HANA/HANA_PDE_Uebung/pde_uebungen-main.tex
+++ b/Math-Ba-HANA/HANA_PDE_Uebung/pde_uebungen-main.tex
@@ -397,6 +397,7 @@ nobreak,%
 %---------------------------------------
 
 \usepackage{accents}
+\usepackage{wrapfig}
 
 %---------------------------------------
 % additional comands
@@ -433,5 +434,6 @@ nobreak,%
 \include{pde-uebungen-6}
 \include{pde-uebungen-7}
 \include{pde-uebungen-8}
+\include{pde-uebungen-9}
 
 \end{document}
