HANA-PDE: UE10 angefangen

--- a/Math-Ba-HANA/HANA_PDE_Uebung/pde_uebungen-main.tex
+++ b/Math-Ba-HANA/HANA_PDE_Uebung/pde_uebungen-main.tex
@@ -435,5 +435,6 @@ nobreak,%
 \include{pde-uebungen-7}
 \include{pde-uebungen-8}
 \include{pde-uebungen-9}
+\include{pde-uebungen-10}
 
 \end{document}
