--- a/Math-Ba-HANA/HANA_PDE_Uebung/pde-uebungen-10.tex
+++ b/Math-Ba-HANA/HANA_PDE_Uebung/pde-uebungen-10.tex
@@ -13,7 +13,7 @@
 	\begin{enumerate}[label=(zu \alph*), leftmargin=*]
 		\item Sei $0 = x_1 < x_2 < \dots < x_n = 1$ eine Zerlegung des Intervalls $(0,1)$, sodass $\left. u \right\vert_{(x_i, x_{i+1})} \defqe u_i$ für alle $i = 0, \dots, n-1$ stetig differenzierbar ist. Aufgrund der gleichmäßigen Beschränktheit von $u'$ existiert ein $0 < C < \infty$, sodass $u_i'(x) \le C$ für alle $x \in (x_i, x_{i+1})$ und alle $i \in \menge{0, 1, \dots, n-1}$. Dann gilt
 		\begin{equation*}
-			\int u'(x) \dx = \sum_{i=0}^{n-1} \int_{x_i}^{x_{i+1}} u_i'(x) \dx \le \sum_{i=0}^{n-1} \int_{x_i}^{x_{i+1}} C \dx = \sum_{i=0}^{n-1} C * \underbrace{\abs{x_{i+1} - x_i}}_{\le 1} \le (n+1) C < \infty
+			\int_0^1 u'(x) \dx = \sum_{i=0}^{n-1} \int_{x_i}^{x_{i+1}} u_i'(x) \dx \le \sum_{i=0}^{n-1} \int_{x_i}^{x_{i+1}} C \dx = \sum_{i=0}^{n-1} C * \underbrace{\abs{x_{i+1} - x_i}}_{\le 1} \le (n+1) C < \infty
 		\end{equation*}
 		und somit $u' \in L^1_{\text{loc}}(0,1)$. Außerdem gilt mit stückweiser partieller Integration für alle $\phi \in C_0^\infty(0,1)$
 		\begin{equation*}
@@ -28,6 +28,8 @@
 		\end{equation*}
 		wobei $\sqbrackets{u \phi}_0^1 = 0$, da $\phi(0) = \phi(1) = 0$ wegen $\phi \in C_0^\infty(0,1)$.
 		Somit ist $u' \in L_{\text{loc}}^1(0,1)$ und es gilt $\int_0^1 u \phi' \dx = - \int_0^1 u' \phi \dx$ für alle $\phi \in C_0^\infty(0,1)$, d.h. $u'$ ist schwache Ableitung von $u$ auf $(0,1)$. Die stückweise Stetigkeit folgt dabei aus der stetigen Differenzierbarkeit von $u_i$ für alle $i \in \menge{0, \dots, n-1}$.
+		
+		\item ---
 	\end{enumerate}
 
 
@@ -39,7 +41,19 @@
 			\item $u|_V \in W^{k,p}(V)$ für jede offene Menge $V\subset U$.
 		\end{enumerate}	
 	\end{task}
-	\begin{enumerate}[label=(zu \alph*), leftmargin=*, start=2]
+	\begin{enumerate}[label=(zu \alph*), leftmargin=*]
+		\item Sei $v \defeq D^\alpha u$. Dann ist
+		\begin{align*}
+			(-1)^{\abs{\alpha}} \int_U v D^\beta \phi \dx 
+			&= (-1)^{\abs{\alpha}}  \int_U D^\alpha u * D^\beta \phi \dx \\
+			&= \int_U u * D^\alpha (D^\beta \phi) \dx \tag{partielle Integration}\\
+			&= \int_U u * D^{\alpha + \beta} \phi \dx \tag{klassische Ableitung vertauschbar} \\
+			&= (-1)^{\abs{\alpha + \beta}} \int_U D^{\alpha + \beta} u * \phi \dx
+			\tag{partielle Integration} \\
+			&= (-1){\abs{\alpha} + \abs{\beta}} \int_U D^{\alpha + \beta} u * \phi \dx \tag{$\alpha, \beta \ge 0$}
+		\end{align*}
+		Und somit ist $D^\beta v = D^{\alpha + \beta} u$, also gerade die Behauptung.
+		
 		\item Der Sobolev-Raum $W^{k,p}(U)$ ist ein Banachraum, d.h. insbesondere ein Vektorraum über dem Körper $\R$. Somit ist er abgeschlossen unter Linearkombination und aus $u,v \in W^{k,p}(U)$ folgt auch, dass für alle $\lambda, \mu \in \R$ schon $\lambda u + \mu v \in W^{k,p}(U)$. Weiterhin ist wegen $u,v \in W^{k,p}(U)$ für $\abs{\alpha} \le k$ auch
 		\begin{equation*}
 			\begin{aligned}
@@ -51,5 +65,7 @@
 			\end{aligned}
 		\end{equation*}
 		und daher $D^\alpha (\lambda u + \mu v) = \lambda D^\alpha u + \mu D^\alpha v$ für alle $u,v \in W^{k,p}(U)$ und alle $\lambda, \mu \in \R$ sowie $\abs{\alpha} \le k$.
+		
+		\item ---
 	\end{enumerate}
 \end{exercisePage}
