HANA-PDE: UE11 (fast) fertig

--- a/Math-Ba-HANA/HANA_PDE_Uebung/pde_uebungen-main.tex
+++ b/Math-Ba-HANA/HANA_PDE_Uebung/pde_uebungen-main.tex
@@ -436,5 +436,6 @@ nobreak,%
 \include{pde-uebungen-8}
 \include{pde-uebungen-9}
 \include{pde-uebungen-10}
+\include{pde-uebungen-11}
 
 \end{document}
